force-app/main/default/objects/Identity_Information__c/Identity_Information__c.object-meta.xml
<CustomObject>
    <description
  >Stores key information extracted from a South African ID number.</description>
    <label>Identity Information</label>
    <nameField>
        <displayFormat>ID-{00000000}</displayFormat>
        <label>Identity Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identity Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>