force-app/main/default/objects/Identity_Information__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <formula>DATE(
    IF(
        VALUE(LEFT(ID_Number__c, 2)) &gt;= (YEAR(TODAY()) - 2000),
        1900 + VALUE(LEFT(ID_Number__c, 2)),
        2000 + VALUE(LEFT(ID_Number__c, 2))
    ),
    VALUE(MID(ID_Number__c, 3, 2)),
    VALUE(MID(ID_Number__c, 5, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>