force-app/main/default/objects/Identity_Information__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <description>13-digit South African identity number</description>
    <externalId>true</externalId>
    <label>ID Number</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>