force-app/main/default/objects/Identity_Information__c/fields/SA_Citizen__c.field-meta.xml
<CustomField>
    <fullName>SA_Citizen__c</fullName>
    <formula>IF(VALUE(MID(ID_Number__c,11,1)) = 0, TRUE, FALSE)</formula>
    <label>SA Citizen</label>
    <type>Checkbox</type>
</CustomField>