force-app/main/default/objects/Identity_Information__c/fields/Search_Count__c.field-meta.xml
<CustomField>
    <fullName>Search_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of searches for this ID number</description>
    <label>Search Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>