force-app/main/default/objects/Identity_Information__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <formula>IF(VALUE(MID(ID_Number__c, 7,4)) &gt;= 5000, &apos;Male&apos;, &apos;Female&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sex</label>
    <type>Text</type>
</CustomField>